--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=PCA95x5
-version=0.1.2
+name=Anitracks_PCA95x5
+version=0.1.3
 author=hideakitai
 maintainer=semcneil
 sentence=Arduino library for PCA9535 and PCA9555 (Remote 16-bit I2C and SMBus I/O Expander with Interrupt Output and Configuration Registers)
-paragraph=Arduino library for PCA9535 and PCA9555 (Remote 16-bit I2C and SMBus I/O Expander with Interrupt Output and Configuration Registers)
+paragraph=Implements the functionality for the PCA9535 and PCA9555
 category=Device Control
 url=https://github.com/semcneil/PCA95x5
 architectures=*
+includes=PCA95x5.h
